<resources>
    <string name="app_name">NotesApp</string>

    <string name="lab_new">New</string>
    <string name="lab_edit">Edit</string>
    <string name="lab_delete">Delete</string>

    <string name="lab_save">Save</string>
    <string name="lab_cancel">Cancel</string>
    <string name="lab_title">Title</string>
    <string name="lab_content">Content</string>

    <string name="Author">Arsenii Hrynchak 303</string>
</resources>